Almost ready, TBD make it reload when window resize

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "titleBar.inactiveBackground": "#501dd999",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#501dd9"
+  "peacock.color": "#501dd9",
+  "liveServer.settings.port": 5501
 }
